--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,5 +1,6 @@
 .header {
   width: 100%;
   height: 50px;
-  background: lightcoral;
+  background-color: #F7F7F7;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, .15);
 }
