--- a/src/app/photo/photo.component.css
+++ b/src/app/photo/photo.component.css
@@ -1,6 +1,8 @@
 .photo {
   width: 120px;
-  border: 1px solid red;
+  background-color: #F7F7F7;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, .15);
+  border-radius: 5px;
   padding: 10px;
   margin: 10px;
 }
