Added lifecycle hooks

--- a/src/app/photo/photo.component.html
+++ b/src/app/photo/photo.component.html
@@ -1,4 +1,4 @@
-<div class="photo">
+<div class="photo" #templateReference>
   <p class="photo-text">ID zdjęcia: {{ photo.id }}</p>
   <p class="photo-text">ID albumu: {{ photo.albumId }}</p>
   <p class="photo-text">Tytuł: {{ photo.title }}</p>
