Added pipes and routing

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,5 @@
-<p class="header">header works!</p>
+<div class="header">
+  <a [routerLink]="'/photos'" class="link"> Photos </a>
+  <a [routerLink]="'/users'" class="link"> Users </a>
+  <a [routerLink]="'/cokolwiek'" class="link">Cokolwiek</a>
+</div>
