--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -3,4 +3,18 @@
   height: 50px;
   background-color: #F7F7F7;
   box-shadow: 0 3px 6px rgba(0, 0, 0, .15);
+  
+  padding: 0 20px;
+  display: flex;
+  align-items: center;
+}
+
+.link {
+  margin: 0 10px;
+  text-decoration: none;
+  transition: transform .3s ease-in;
+}
+
+.link:hover {
+  transform: scale(1.05);
 }
