--- a/src/app/photo/photo.component.html
+++ b/src/app/photo/photo.component.html
@@ -1,9 +1,10 @@
 <div class="photo" #templateReference>
   <p class="photo-text">ID zdjęcia: {{ photo.id }}</p>
   <p class="photo-text">ID albumu: {{ photo.albumId }}</p>
-  <p class="photo-text">Tytuł: {{ photo.title }}</p>
-  <p class="photo-text">Polubienia: {{ photo.likes }}</p>
-  <p class="photo-text">Znielubienia: {{ photo.unlikes }}</p>
+  <p class="photo-text">Tytuł: {{ photo.title | uppercase }}</p>
+  <p class="photo-text">Polubienia: {{ photo.likes | boostValue: 100 }}</p>
+  <p class="photo-text">Znielubienia: {{ photo.unlikes | boostValue: 10 }}</p>
+  <p class="photo-text">Data: {{ photo.creationDate | date: "dd.MM.yyyy" }}</p>
   <img [src]="photo.url" class="photo-img" />
 
   <button class="photo-button" (click)="onDeleteClick()">Usuń</button>
