--- a/src/app/photos/photos.component.html
+++ b/src/app/photos/photos.component.html
@@ -20,6 +20,7 @@
     *ngFor="let cokolwiek of photos | slice: minValue:maxValue"
     [photo]="cokolwiek"
     (deletePhoto)="deletePhoto($event)"
+    (editPhoto)="updatePhoto($event)"
     (likePhoto)="increasePhotoLike($event)"
     (unlikePhoto)="increasePhotoUnlike($event)"
   ></app-photo>
